<resources>
    <string name="app_name">sleeptrack</string>
    <string name="button_send">profile</string>
    <string name="edit_message">Enter the message</string>
    <string name="profile">Profile</string>
    <string name="weight">Weight</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="home">Snoozable</string>
    <string name="view_statistics">View Statistics</string>
    <string name="daily_log">Daily Log</string>
    <string name="alarm_settings">Alarm Settings</string>
    <string name="text_statistics">Statistics</string>
    <string name="dlq1">How long (estimated) did you sleep last night?</string>
    <string name="dla1">hours</string>
    <string name="dlq2">Rate the quality of your sleep from 1 - 10:</string>
    <string name="dlq3">How much energy did you have throughout the day? Rate from 1 - 10:</string>
    <string name="ok">ok</string>
    <string-array name="num_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="hours_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
    </string-array>
    <string name="location">location</string>
    <string name="height">height</string>
    <string name="sleep_time">sleep time</string>
    <string name="naps">naps</string>
    <string name="sleep_type">sleep type</string>
    <string name="diet">diet</string>
    <string name="daily_energy">daily energy</string>
    <string name="birthday">24</string>
    <string-array name="gender">
        <item>man</item>
        <item>woman</item>
    </string-array>
    <string name="zip_code">zip code</string>
    <string-array name="sleep_time">
        <item>early</item>
        <item>late</item>
        <item>normal</item>
        <item>nocturnal</item>
    </string-array>
    <string-array name="naps">
        <item>regularly</item>
        <item>infrequent</item>
        <item>never</item>
    </string-array>
    <string-array name="sleep_type">
        <item>short</item>
        <item>normal</item>
        <item>long</item>
    </string-array>
    <string-array name="diet_opt">
        <item>healthy</item>
        <item>normal</item>
        <item>unhealthy</item>
    </string-array>
    <string name="alarm">warm</string>
</resources>
